@@ -1,7 +1,7 @@
 <div class="active-scaffold-header">
   <div class="actions">
     <% active_scaffold_config.action_links.member.each do |link| -%>
-      <% next unless link.action == 'nested' -%>
+      <% next unless link.action == 'index' -%>
       <% next if skip_action_link(link) -%>
       <%= record.authorized_for?(:crud_type => link.crud_type, :action => link.action) ? render_action_link(link, url_options, record) : "<a class='disabled'>#{link.label}</a>" -%>
     <% end -%>
